--- a/index.html
+++ b/index.html
@@ -42,6 +42,30 @@
   <br><br>
   <div id="canvas"></div>
   <div id="game-console"></div>
+  <h4>
+    Source Code : <a href="https://github.com/linuk">Link</a>  - Game Credit : Mario
+  </h4>
+
+  
+<div id="myModal" class="modal fade ">
+  <div class="modal-dialog" >
+    <!-- Modal content-->
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button class="close" data-dismiss="modal">&times;</button>
+        <h4>Instructions</h4>
+      </div>
+
+       <div class="modal-body">
+          <img src="jump.png" class="img-responsive instruction_image">
+          <img src="right.png" class="img-responsive instruction_image">
+          <img src="left.png" class="img-responsive instruction_image">
+        </div>
+
+    </div>
+  </div>
+</div>
   </center>
 
   </body>
